# manning-building-llm-applications-self

ch01/: 01-langchain_examples.ipynb  pyproject.toml
ch02/: prompt_examples.ipynb  pyproject.toml
