[project]
name = "ch01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook==7.4.5",
    "langchain==1.0.3",
    "langchain-openai==1.0.1",
    "ipykernel>=7.3.0",
]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
